--- a/.github/workflows/flutter_package.yml
+++ b/.github/workflows/flutter_package.yml
@@ -47,18 +47,18 @@ jobs:
           very_good packages get --recursive
 
       - name: 🏃🏼‍♂️ Buildrunner build
-        run: |
-          flutter pub run build_runner build --delete-conflicting-outputs
+        run: flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: 🏞 Generate assets with fluttergen
-        run: |
-          fluttergen
+        run: fluttergen
 
       - name: ✨ Check Formatting
         run: flutter format --set-exit-if-changed lib test
 
       - name: 🕵️ Analyze
-        run: flutter analyze lib test
+        run: |
+          pwd
+          flutter analyze lib test
 
       - name: 🧪 Run Tests
         run: flutter test --no-pub --coverage --test-randomize-ordering-seed random
